<resources>
    <string name="app_name">InventoryApp*</string>
    <string name="empty_view_text">No Products</string>
    <string name="action_delete_all_products">Delete All Products</string>
    <string name="delete_all_dialog_msg">Delete All these Products ?</string>
    <string name="add_product">Add New Product</string>
    <string name="product_editor">Product Editor</string>
    <string name="product_details">Product details</string>
    <string name="edit_product">Edit Product</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="supplier_amazon">Amazon</string>
    <string name="supplier_paytm">Paytm</string>
    <string name="supplier_myntra">Myntra</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="product_view">See Product Details</string>
    <string name="delete_dialog_msg">Delete this Product?</string>
    <string name="quantity_change_msg">Quantity was change</string>
    <string name="quantity_finish_msg">Product was finish, buy another Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_price_currency">INR</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Phone Number</string>
    <string name="action_save">Save</string>
    <string name="empty_list">Save</string>
    <string name="insert_failed">Error with saving product</string>
    <string name="insert_successful">Product saved successfully</string>
    <string name="update_failed">Error with updating product</string>
    <string name="update_successful">Product updated successfully</string>
    <string name="deleted_all_products_message">rows deleted from product table</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error with deleting Product</string>
    <string name="product_name_requires">Product name requires</string>
    <string name="filed_requires">please fill all filed form to insert an new product</string>
    <string name="price_requires">Product price requires</string>
    <string name="quantity_requires">Product quantity requires</string>
    <string name="supplier_name_requires">Supplier Name requires select anything without unknown selection</string>
    <string name="supplier_phone_requires">Supplier Phone requires</string>
</resources>
