<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.exampleone.s.inventoryapp.ViewProductActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/product_view"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
        <Button
            android:id="@+id/delete_button"
            style="@style/ActivityViewButtonStyle"
            android:layout_marginLeft="100dp"
            android:background="@drawable/delete"
            android:padding="5dp" />
    </LinearLayout>
    <TextView
        style="@style/ProductViewTitleTextStyle"
        android:text="@string/product_name"
        android:textSize="@dimen/size" />
    <TextView
        android:id="@+id/product_name_view_text"
        style="@style/ProductViewdetailStyle" />
    <TextView
        style="@style/ProductViewTitleTextStyle"
        android:text="@string/product_price"
        android:textSize="@dimen/size" />
    <LinearLayout
        style="@style/ProductViewdetailStyle"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/product_price_view_text"
            style="@style/ProductViewdetailStyle" />
        <TextView
            style="@style/CurrencyStyle"
            android:layout_marginLeft="16dp"
            android:text="@string/product_price_currency" />
    </LinearLayout>
    <TextView
        style="@style/ProductViewTitleTextStyle"
        android:text="@string/product_quantity"
        android:textSize="@dimen/size" />
    <LinearLayout
        style="@style/ProductViewdetailStyle"
        android:orientation="horizontal">
        <Button
            android:id="@+id/increase_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/colorAccent"
            android:text="+"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/product_quantity_view_text"
            style="@style/ProductViewdetailStyle" />
        <Button
            android:id="@+id/decrease_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/colorAccent"
            android:text="-"
            android:textColor="#fff" />
    </LinearLayout>
    <TextView
        style="@style/ProductViewTitleTextStyle"
        android:text="@string/product_supplier_name"
        android:textSize="@dimen/size" />
    <TextView
        android:id="@+id/product_supplier_name_view_text"
        style="@style/ProductViewdetailStyle" />
    <TextView
        style="@style/ProductViewTitleTextStyle"
        android:text="@string/product_supplier_phone_number"
        android:textSize="@dimen/size" />
    <LinearLayout
        style="@style/ProductViewdetailStyle"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/product_supplier_phone_number_view_text"
            style="@style/ProductViewdetailStyle" />
        <Button
            android:id="@+id/phone_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:focusable="false"
            android:text="call" />
    </LinearLayout>
</LinearLayout>